# avr_template

./: .gitignore  CMakeLists.txt  Dockerfile  README  bootstrap.sh  main.S  main.c
.run/: 3_Start_Simulator.xml
